# Morphio

./: .gitignore  .jiu.toml  Cargo.toml  PLAN.md  README.md  index.html  index.js  style.css
.github/workflows/: pages.yml  release.yml
examples/: dump.rs  latex.rs
src/: error.rs  font.rs  gsub.rs  lib.rs  main.rs  recipe.rs  ttc.rs
src/ext/: font_ref.rs  gsub.rs  mod.rs
src/gsub/: equal.rs  feature.rs  mod.rs  n_to_n.rs  n_to_one.rs  one_to_n.rs  one_to_one.rs  shared.rs  variable.rs
tests/: integration_test.rs  shaping_test.rs
tests/recipes/: README.md  coverage.toml  latex_unicode.toml  simple.toml
web/: index.html  index.js  manifest.json  style.css  sw.js
