[package]
name = "morphio"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Morphs the font, so it renders worda as wordb"
keywords = ["font", "morph", "typography", "cli", "wasm"]
categories = ["command-line-utilities", "wasm"]
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/morphio"
license = "MIT"
authors = ["PRO-2684"]

[features]
default = []
cli = ["argh"]

[dependencies]
read-fonts = "0.38.0"
write-fonts = "0.46.0"
argh = { version = "0.1.19", default-features = false, features = ["help"], optional = true }
range-set-blaze = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "morphio"
required-features = ["cli"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
